--- a/src/main/resources/fxml/chapter_content_new.fxml
+++ b/src/main/resources/fxml/chapter_content_new.fxml
@@ -188,7 +188,7 @@
          <children>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <ImageView disable="false" fx:id="session_2_1" fitHeight="97.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="session_2_1" disable="false" fitHeight="97.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../ch_2_1_g_en.png" />
                      </image>
@@ -203,9 +203,9 @@
                   <Insets left="20.0" right="20.0" />
                </HBox.margin>
                <children>
-                  <ImageView fx:id="session_2_2" disable="true" fitHeight="100.0" fitWidth="98.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="session_2_2" disable="true" fitHeight="100.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ch_2_2_g.png" />
+                        <Image url="@../ch_2_2_g_en.png" />
                      </image>
                   </ImageView>
                </children>
@@ -215,9 +215,9 @@
                   <Insets left="20.0" right="20.0" />
                </HBox.margin>
                <children>
-                  <ImageView fx:id="session_2_3" disable="true" fitHeight="115.0" fitWidth="92.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="session_2_3" disable="true" fitHeight="115.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ch_2_3_g.png" />
+                        <Image url="@../ch_2_3_g_en.png" />
                      </image>
                   </ImageView>
                </children>
@@ -229,7 +229,7 @@
                <children>
                   <ImageView fx:id="session_2_4" disable="true" fitHeight="111.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ch_2_3_g_en.png" />
+                        <Image url="@../ch_2_4_g_en.png" />
                      </image>
                   </ImageView>
                </children>
@@ -245,7 +245,7 @@
                <children>
                   <ImageView fx:id="session_2_5" disable="true" fitHeight="97.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ch_2_4_g_en.png" />
+                        <Image url="@../ch_2_5_g_en.png" />
                      </image>
                   </ImageView>
                </children>
@@ -257,7 +257,7 @@
                <children>
                   <ImageView fx:id="session_2_6" disable="true" fitHeight="98.0" fitWidth="120.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ch_2_5_g_en.png" />
+                        <Image url="@../ch_2_6_g_en.png" />
                      </image>
                   </ImageView>
                </children>
@@ -269,7 +269,7 @@
                <children>
                   <ImageView fx:id="session_2_7" disable="true" fitHeight="96.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ch_2_6_g_en.png" />
+                        <Image url="@../ch_2_7_g_en.png" />
                      </image>
                   </ImageView>
                </children>
