--- a/src/main/resources/fxml/bangla_chapter_content.fxml
+++ b/src/main/resources/fxml/bangla_chapter_content.fxml
@@ -409,7 +409,7 @@
                     <children>
                         <ImageView fx:id="session_2_quiz_2" disable="true" fitHeight="111.0" fitWidth="101.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../ch_2_25_g_en.png" />
+                                <Image url="@../ch_2_21_lock.png" />
                             </image>
                         </ImageView>
                     </children>
@@ -455,9 +455,21 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
+                        <ImageView fx:id="session_3_3" disable="true" fitHeight="100.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../ch_3_3_g.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </VBox>
+                <VBox prefHeight="200.0" prefWidth="100.0">
+                    <HBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                    </HBox.margin>
+                    <children>
                         <ImageView fx:id="session_3_quiz" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../ch_3_3_l_en.png" />
+                                <Image url="@../ch_3_4_g.png" />
                             </image>
                         </ImageView>
                     </children>
