--- a/src/main/resources/fxml/chapter_content_new.fxml
+++ b/src/main/resources/fxml/chapter_content_new.fxml
@@ -167,7 +167,7 @@
                <Insets left="20.0" right="20.0" />
             </HBox.margin>
             <children>
-               <ImageView fx:id="session_1_12" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+               <ImageView fx:id="session_1_12" disable="true" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                   <image>
                      <Image url="@../ch_1_12_g_en.png" />
                   </image>
