--- a/src/main/resources/fxml/bangla_chapter_content.fxml
+++ b/src/main/resources/fxml/bangla_chapter_content.fxml
@@ -103,7 +103,7 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_1_quiz" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_1_quiz" disable="false" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_1_7_g.png" />
                             </image>
@@ -293,7 +293,7 @@
             <children>
                 <VBox prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <ImageView fx:id="session_2_quiz_1" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_2_quiz_1" disable="false" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_2_13_lock.png" />
                             </image>
@@ -407,7 +407,7 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_2_quiz_2" disable="true" fitHeight="111.0" fitWidth="101.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_2_quiz_2"  disable="false" fitHeight="111.0" fitWidth="101.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_2_21_lock.png" />
                             </image>
@@ -467,7 +467,7 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_3_quiz" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_3_quiz" disable="false" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_3_4_g.png" />
                             </image>
