--- a/src/main/resources/fxml/bangla_chapter_content.fxml
+++ b/src/main/resources/fxml/bangla_chapter_content.fxml
@@ -103,7 +103,7 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_1_quiz" disable="false" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_1_8" disable="false" fitHeight="101.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_1_7_g.png" />
                             </image>
@@ -129,7 +129,7 @@
             <children>
                 <VBox prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <ImageView fx:id="session_2_1" disable="false" fitHeight="110.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_2_1" disable="true" fitHeight="110.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_2_1_g.png" />
                             </image>
@@ -293,9 +293,9 @@
             <children>
                 <VBox prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <ImageView fx:id="session_2_quiz_1" disable="false" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_2_13" disable="true" fitHeight="99.0" fitWidth="126.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../ch_2_13_lock.png" />
+                                <Image url="@../ch_2_13_g.png" />
                             </image>
                         </ImageView>
                     </children>
