--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D7BBD9;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.desktop.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" style="-fx-background-color: #D7BBD9;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.desktop.controller.LoginController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" layoutY="20.0" prefHeight="77.0" prefWidth="573.0" stylesheets="Login.css" text="Login Credential" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" layoutY="20.0" prefHeight="77.0" prefWidth="573.0"  text="Login Credential" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
