--- a/src/main/resources/fxml/chapter_content_new.fxml
+++ b/src/main/resources/fxml/chapter_content_new.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #D7BBD9;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.desktop.controller.ContentViewController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #D7BBD9;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.desktop.controller.ContentViewController">
    <children>
       <Label alignment="CENTER" prefHeight="16.0" prefWidth="598.0" style="-fx-background-color: #77577A;" text="Chapter 1: Help Babies to Breath" textFill="WHITE">
          <font>
@@ -598,8 +598,7 @@
       </HBox>
       <Pane prefHeight="58.0" prefWidth="600.0" style="-fx-background-color: #77577A;">
          <children>
-            <Button fx:id="back_button" layoutX="14.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#onMouseClicked" prefHeight="26.0" prefWidth="99.0" text="Back" />
-            <Button fx:id="forward_button" layoutX="436.0" layoutY="16.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="101.0" text="Forward" />
+            <Button alignment="CENTER" fx:id="back_button" layoutX="270.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#onMouseClicked" prefHeight="30.0" prefWidth="150.0" text="Log Out" />
          </children>
       </Pane>
    </children>
