--- a/src/main/resources/fxml/bangla_chapter_content.fxml
+++ b/src/main/resources/fxml/bangla_chapter_content.fxml
@@ -17,7 +17,7 @@
                 <Font size="26.0" />
             </font>
         </Label>
-        <HBox prefHeight="129.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="129.0" prefWidth="800.0">
             <VBox.margin>
                 <Insets top="10.0" />
             </VBox.margin>
@@ -72,7 +72,7 @@
                 </VBox>
             </children>
         </HBox>
-        <HBox prefHeight="128.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="128.0" prefWidth="700.0">
             <children>
                 <VBox prefHeight="128.0" prefWidth="93.0">
                     <HBox.margin>
@@ -117,12 +117,12 @@
                 </VBox>
             </children>
         </HBox>
-        <Label alignment="CENTER" prefHeight="16.0" prefWidth="598.0" style="-fx-background-color: #77577A;" text=" অধ্যায় ২- সুস্থ ও অসুস্থ শিশুর পরিচর্যা" textFill="WHITE">
+        <Label alignment="CENTER" prefHeight="16.0" prefWidth="800.0" style="-fx-background-color: #77577A;" text=" অধ্যায় ২- সুস্থ ও অসুস্থ শিশুর পরিচর্যা" textFill="WHITE">
             <font>
                 <Font size="25.0" />
             </font>
         </Label>
-        <HBox prefHeight="129.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="129.0" prefWidth="800.0">
             <VBox.margin>
                 <Insets top="10.0" />
             </VBox.margin>
@@ -177,7 +177,7 @@
                 </VBox>
             </children>
         </HBox>
-        <HBox prefHeight="128.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="128.0" prefWidth="700.0">
             <children>
                 <VBox prefHeight="128.0" prefWidth="93.0">
                     <HBox.margin>
@@ -231,7 +231,7 @@
 
             </children>
         </HBox>
-        <HBox prefHeight="129.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="129.0" prefWidth="800.0">
             <VBox.margin>
                 <Insets top="10.0" />
             </VBox.margin>
@@ -286,7 +286,7 @@
                 </VBox>
             </children>
         </HBox>
-        <HBox prefHeight="129.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="129.0" prefWidth="700.0">
             <VBox.margin>
                 <Insets top="10.0" />
             </VBox.margin>
@@ -341,7 +341,7 @@
                 </VBox>
             </children>
         </HBox>
-        <HBox prefHeight="129.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="129.0" prefWidth="800.0">
             <VBox.margin>
                 <Insets top="10.0" />
             </VBox.margin>
@@ -397,7 +397,7 @@
             </children>
         </HBox>
 
-        <HBox prefHeight="129.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="129.0" prefWidth="800.0">
             <VBox.margin>
                 <Insets top="10.0" />
             </VBox.margin>
@@ -407,7 +407,7 @@
                         <Insets left="20.0" right="20.0" />
                     </HBox.margin>
                     <children>
-                        <ImageView fx:id="session_2_quiz_2"  disable="false" fitHeight="111.0" fitWidth="101.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="session_2_quiz_2" disable="false" fitHeight="111.0" fitWidth="101.0" onMouseClicked="#onMouseClicked" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../ch_2_21_lock.png" />
                             </image>
@@ -421,7 +421,7 @@
                 <Font size="26.0" />
             </font>
         </Label>
-        <HBox prefHeight="129.0" prefWidth="600.0">
+        <HBox alignment="CENTER" prefHeight="129.0" prefWidth="700.0">
             <VBox.margin>
                 <Insets top="10.0" />
             </VBox.margin>
@@ -476,7 +476,7 @@
                 </VBox>
             </children>
         </HBox>
-        <Pane prefHeight="58.0" prefWidth="600.0" style="-fx-background-color: #77577A;">
+        <Pane prefHeight="58.0" prefWidth="800.0" style="-fx-background-color: #77577A;">
             <children>
                 <Button fx:id="back_button" layoutX="240.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#onMouseClicked" prefHeight="30.0" prefWidth="150.0" text="Log Out" />
             </children>
