--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" style="-fx-background-color: #D7BBD9;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.desktop.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="700.0" prefWidth="800.0" style="-fx-background-color: #D7BBD9;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mpower.desktop.controller.LoginController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" layoutY="20.0" prefHeight="77.0" prefWidth="573.0"  text="Login Credential" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" layoutY="20.0" prefHeight="77.0" prefWidth="573.0" text="Login Credential" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
@@ -22,7 +22,7 @@
       <Label layoutX="59.0" layoutY="172.0" prefHeight="16.0" prefWidth="73.0" text="Password" />
       <TextField fx:id="userId" layoutX="176.0" layoutY="131.0" prefHeight="26.0" prefWidth="324.0" />
       <PasswordField fx:id="password" layoutX="176.0" layoutY="167.0" prefHeight="26.0" prefWidth="324.0" />
-      <Button layoutX="202.0" layoutY="246.0" mnemonicParsing="false" onAction="#processLogin" prefHeight="26.0" prefWidth="197.0" text="Log In" />
+      <Button contentDisplay="CENTER" layoutX="202.0" layoutY="246.0" mnemonicParsing="false" onAction="#processLogin" prefHeight="26.0" prefWidth="197.0" text="Log In" />
       <Button layoutX="202.0" layoutY="300.0" mnemonicParsing="false" onAction="#processRegister" prefHeight="26.0" prefWidth="197.0" text="Register" />
    </children>
 </AnchorPane>
